@@ -5,7 +5,6 @@ package org.xins.client;
 
 import org.xins.common.MandatoryArgumentChecker;
 
-import org.xins.common.service.CallException;
 import org.xins.common.service.CallExceptionList;
 import org.xins.common.service.CallResult;
 import org.xins.common.service.TargetDescriptor;
